# sccircuits

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  example_usage.py  mkdocs.yml  pixi.toml  pyproject.toml  test_bare_modes.py
.github/workflows/: ci.yml  docs.yml  publish.yml
apps/: bbq_circuit_designer.py
benchmarks/: diagonalization_smoke.py
docs/: conf.py  index.md  install.md  installation.md  quickstart.md
docs/_static/: custom.css
docs/api/: bbq.md  circuit.md  fitting.md  index.md  interactive.md  package.md  reduction.md  utilities.md
docs/bbq/: examples.md  implementation-notes.md  index.md  quickstart.md  validation.md
docs/getting-started/: bbq-researcher-guide.md  researcher-guide.md
docs/guides/: bbq-circuit-designer.md  bbq-workflow.md  circuit-modeling.md  index.md  iterative-diagonalization.md  point-picking.md  transition-fitting.md
docs/theory/: background.md  circuit-matrix-quantization.md  graph-to-matrix-quantization.md  index.md
sccircuit/: bbq.py  circuit.py  iterative_diagonalizer.py  pointpicker.py
sccircuits/: CircuitFitter.py  __init__.py  _pointpicker_tagui.py  bbq.py  circuit.py  fit_analysis.py  iterative_diagonalizer.py  pointpicker.py  reduction.py  transition_fitter.py  utilities.py
tests/: __init__.py  pip_smoke.py  test_bbq.py  test_bbq_circuit_designer.py  test_circuit.py  test_circuit_fitter_jacobian.py  test_pointpicker_yaml.py  test_public_api.py  test_reduction.py
