[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sccircuits"
version = "0.1.0"
description = "Superconducting Circuit Analysis Package"
readme = "README.md"
authors = [
    {name = "Joan Caceres", email = "contact@joancaceres.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
keywords = ["superconducting circuits", "quantum circuits", "circuit quantization", "BBQ", "black box quantization"]
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.3,<3",
    "scipy>=1.15,<2",
    "matplotlib>=3.10,<4",
    "sympy>=1.13,<2",
]

[project.optional-dependencies]
interactive = [
    "ipywidgets>=8.1,<9",
    "IPython>=9,<10"
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "pymdown-extensions>=10.8,<11",
]
dev = [
    "pytest>=8.4,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.12,<1",
    "mypy>=1.16,<2",
    "jupyter>=1,<2",
    "notebook>=7,<8"
]

[project.urls]
Homepage = "https://github.com/joanjcaceres/sccircuits"
Repository = "https://github.com/joanjcaceres/sccircuits"
Documentation = "https://joanjcaceres.github.io/sccircuits/"
Issues = "https://github.com/joanjcaceres/sccircuits/issues"

[tool.setuptools]
packages = ["sccircuits"]

[tool.setuptools.package-data]
sccircuits = ["*.py"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
